@startuml
skinparam linetype ortho

entity "users" as users {
  *user_id : serial <<pk>>
  --
  *firstname : text
  *lastname : text
  phone_number : text
  *email : text <<unique>>
  *password : text
  role_id : int
}

entity "orders" as orders {
  *order_id : serial <<pk>>
  --
  *user_id : int <<fk>>
  staff_id : int <<fk>>
  total_price : numeric
}

entity "order_status_history" as order_status_history {
  *order_id : int <<fk>>
  *update_date : timestamp <<default: now()>>
  --
  status : text
}

entity "order_items" as order_items {
  *order_item_id : serial <<pk>>
  --
  *order_id : int <<fk>>
  *item_type : varchar(20)
  *quantity : int
}

entity "order_item_carport" as order_item_carport {
  *order_item_id : int <<pk, fk>>
  --
  *carport_id : int <<fk>>
}

entity "order_item_material" as order_item_material {
  *order_item_id : int <<pk, fk>>
  --
  *material_id : int <<fk>>
}

entity "carports" as carports {
  *carport_id : serial <<pk>>
  --
  *width : numeric
  *length : numeric
  *height : numeric
  *roof_type : text
  *roof_angle : numeric
  post_material_id : int <<fk>>
  beam_material_id : int <<fk>>
  rafter_material_id : int <<fk>>
  fascia_material_id : int <<fk>>
  roof_cover_material_id : int <<fk>>
  total_price : numeric
}

entity "materials" as materials {
  *material_id : serial <<pk>>
  --
  name : text
  description : text
  unit : text
  width : numeric
  height : numeric
  *material_type : text
  buckling_capacity : numeric
  post_gap : numeric
  length_overlap : numeric
  side_overlap : numeric
  gap_rafters : numeric
  *is_active : boolean
}

entity "predefined_lengths" as predefined_lengths {
  *predefined_length_id : serial <<pk>>
  --
  *length : int
}

entity "material_lengths" as material_lengths {
  *material_id : int <<fk>>
  *predefined_length_id : int <<fk>>
}

entity "price_history" as price_history {
  *price_history_id : serial <<pk>>
  --
  material_id : int <<fk>>
  cost_price : numeric
  sales_price : numeric
  valid_from : date
  valid_to : date
}

' Define relationships
users ||--o{ orders : places
users ||--o{ orders : processes
orders ||--o{ order_status_history : has
orders ||--o{ order_items : contains
order_items ||--o{ order_item_carport : includes
order_items ||--o{ order_item_material : includes
order_item_carport ||--|| carports : references
order_item_material ||--|| materials : references
carports ||--|| materials : uses_post
carports ||--|| materials : uses_beam
carports ||--|| materials : uses_rafter
carports ||--|| materials : uses_fascia
carports ||--|| materials : uses_roof_cover
materials ||--o{ material_lengths : has
predefined_lengths ||--o{ material_lengths : defines
materials ||--o{ price_history : has
@enduml
